# DataLoader

./: DataLoader.cabal  Jenkinsfile  LICENSE  README.md  TestDefinition.txt  stack.yaml
.github/workflows/: ci.yml
app/: Main.hs
src/: Files.hs  Filters.hs  Json.hs  Summary.hs  Types.hs
