name: DataLoader
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2017 Carl Magnuson
maintainer: magnuson.carl@gmail.com
category: Application
author: Carl Magnuson
extra-source-files:
    README.md

library
    exposed-modules:
        Files
        Filters
        Types
        Summary
        Json
    build-depends:
        base >=4.7 && <5,
        text -any,
        safe -any,
        mtl -any,
        containers -any,
        aeson
    default-language: Haskell2010
    hs-source-dirs: src

executable DataLoader
    main-is: Main.hs
    build-depends:
        base >=4.8,
        text >=1.2.0.0,
        csv -any,
        parsec -any,
        lucid -any,
        pretty-show >=1.6.0,
        DataLoader,
        mtl -any,
        bytestring -any,
        containers -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
